fix: configure z-index of footer

--- a/CSS/all.css
+++ b/CSS/all.css
@@ -27,3 +27,23 @@ footer ion-icon {
 section {
   transition: 200ms;
 }
+
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: var(--bg_body);
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
