--- a/CSS/favourites.css
+++ b/CSS/favourites.css
@@ -3,8 +3,10 @@
   background-color: var(--bg_default);
   width: 100%;
   height: fit-content;
-  padding: 1rem 0rem 1rem 2rem;
+  padding: 1rem 1rem 1rem 2rem;
   box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px;
+  bottom: -300;
+  z-index: 1;
 }
 
 .topic-favourites {
@@ -16,6 +18,7 @@
   height: 6.5rem;
   border-radius: 0.7rem;
   margin-top: 1rem;
+
   box-shadow: rgba(99, 99, 99, 0.09) 0px 2px 8px 0px;
 }
 .topic-favourites ion-icon {
@@ -38,4 +41,8 @@ h1 {
   display: flex;
   flex-direction: row;
   gap: 1rem;
+  padding-right: 3rem;
+  padding-bottom: 0.5rem;
+  overflow-x: scroll;
+  overflow-y: hidden;
 }
